// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveRendererShortcutKeybindings (#643) > darwin: binding snapshot 1`] = `
[
  {
    "commandId": "workbench.commandPalette.file.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-o",
    "platform": "darwin",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.glossary.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-@",
    "platform": "darwin",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.line.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-:",
    "platform": "darwin",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "editor.find.next",
    "handlerStatus": "callbackDirect",
    "key": "F3",
    "platform": "darwin",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus",
  },
  {
    "commandId": "editor.find.previous",
    "handlerStatus": "callbackDirect",
    "key": "Shift-F3",
    "platform": "darwin",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus",
  },
  {
    "commandId": "editor.markdown.toggleSyntaxChecker",
    "handlerStatus": "registered",
    "key": "Mod-Shift-c",
    "platform": "darwin",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "commandId": "workspace.files.toggle",
    "handlerStatus": "registered",
    "key": "Mod-Shift-e",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.glossary.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-g",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.documentMap.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-m",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.documentMetrics.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-t",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.files.rename",
    "handlerStatus": "callbackDirect",
    "key": "F2",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.copy",
    "handlerStatus": "callbackDirect",
    "key": "Mod-c",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.cut",
    "handlerStatus": "callbackDirect",
    "key": "Mod-x",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.paste",
    "handlerStatus": "callbackDirect",
    "key": "Mod-v",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.delete",
    "handlerStatus": "callbackDirect",
    "key": "Delete",
    "platform": "darwin",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "editor.preview.toggle",
    "handlerStatus": "registered",
    "key": "Mod-Shift-p",
    "platform": "darwin",
    "scope": "editor",
    "source": "pergamum",
    "when": "activeMarkdownDocument",
  },
  {
    "commandId": "editor.image.insert",
    "handlerStatus": "registered",
    "key": "Mod-Shift-i",
    "platform": "darwin",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "commandId": "workspace.tabs.previous",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Alt-ArrowLeft",
    "platform": "darwin",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen && !textInputFocus",
  },
  {
    "commandId": "workspace.tabs.next",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Alt-ArrowRight",
    "platform": "darwin",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen && !textInputFocus",
  },
]
`;

exports[`resolveRendererShortcutKeybindings (#643) > linux: binding snapshot 1`] = `
[
  {
    "commandId": "workbench.commandPalette.file.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-o",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.heading.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-#",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.glossary.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-@",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.line.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-:",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.projectSearch.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-%",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "editor.find.next",
    "handlerStatus": "callbackDirect",
    "key": "F3",
    "platform": "linux",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus",
  },
  {
    "commandId": "editor.find.previous",
    "handlerStatus": "callbackDirect",
    "key": "Shift-F3",
    "platform": "linux",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus",
  },
  {
    "commandId": "editor.markdown.toggleSyntaxChecker",
    "handlerStatus": "registered",
    "key": "Mod-Shift-c",
    "platform": "linux",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "commandId": "workspace.files.toggle",
    "handlerStatus": "registered",
    "key": "Mod-Shift-e",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.glossary.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-g",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.documentMap.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-m",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.documentMetrics.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-t",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.files.rename",
    "handlerStatus": "callbackDirect",
    "key": "F2",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.copy",
    "handlerStatus": "callbackDirect",
    "key": "Mod-c",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.cut",
    "handlerStatus": "callbackDirect",
    "key": "Mod-x",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.paste",
    "handlerStatus": "callbackDirect",
    "key": "Mod-v",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.delete",
    "handlerStatus": "callbackDirect",
    "key": "Delete",
    "platform": "linux",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "editor.preview.toggle",
    "handlerStatus": "registered",
    "key": "Mod-Shift-p",
    "platform": "linux",
    "scope": "editor",
    "source": "pergamum",
    "when": "activeMarkdownDocument",
  },
  {
    "commandId": "editor.image.insert",
    "handlerStatus": "registered",
    "key": "Mod-Shift-i",
    "platform": "linux",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "commandId": "workspace.tabs.previous",
    "handlerStatus": "callbackDirect",
    "key": "Alt-ArrowLeft",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen && !textInputFocus",
  },
  {
    "commandId": "workspace.tabs.next",
    "handlerStatus": "callbackDirect",
    "key": "Alt-ArrowRight",
    "platform": "linux",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen && !textInputFocus",
  },
]
`;

exports[`resolveRendererShortcutKeybindings (#643) > win32: binding snapshot 1`] = `
[
  {
    "commandId": "workbench.commandPalette.file.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-o",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.heading.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-#",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.glossary.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-@",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.line.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-:",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workbench.commandPalette.projectSearch.open",
    "handlerStatus": "callbackDirect",
    "key": "Mod-%",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "editor.find.next",
    "handlerStatus": "callbackDirect",
    "key": "F3",
    "platform": "win32",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus",
  },
  {
    "commandId": "editor.find.previous",
    "handlerStatus": "callbackDirect",
    "key": "Shift-F3",
    "platform": "win32",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus",
  },
  {
    "commandId": "editor.markdown.toggleSyntaxChecker",
    "handlerStatus": "registered",
    "key": "Mod-Shift-c",
    "platform": "win32",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "commandId": "workspace.files.toggle",
    "handlerStatus": "registered",
    "key": "Mod-Shift-e",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.glossary.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-g",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.documentMap.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-m",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.documentMetrics.toggle",
    "handlerStatus": "callbackDirect",
    "key": "Mod-Shift-t",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen",
  },
  {
    "commandId": "workspace.files.rename",
    "handlerStatus": "callbackDirect",
    "key": "F2",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.copy",
    "handlerStatus": "callbackDirect",
    "key": "Mod-c",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.cut",
    "handlerStatus": "callbackDirect",
    "key": "Mod-x",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.paste",
    "handlerStatus": "callbackDirect",
    "key": "Mod-v",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "workspace.files.delete",
    "handlerStatus": "callbackDirect",
    "key": "Delete",
    "platform": "win32",
    "scope": "pane",
    "source": "pergamum",
    "when": "fileExplorerFocus",
  },
  {
    "commandId": "editor.preview.toggle",
    "handlerStatus": "registered",
    "key": "Mod-Shift-p",
    "platform": "win32",
    "scope": "editor",
    "source": "pergamum",
    "when": "activeMarkdownDocument",
  },
  {
    "commandId": "editor.image.insert",
    "handlerStatus": "registered",
    "key": "Mod-Shift-i",
    "platform": "win32",
    "scope": "editor",
    "source": "pergamum",
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "commandId": "workspace.tabs.previous",
    "handlerStatus": "callbackDirect",
    "key": "Alt-ArrowLeft",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen && !textInputFocus",
  },
  {
    "commandId": "workspace.tabs.next",
    "handlerStatus": "callbackDirect",
    "key": "Alt-ArrowRight",
    "platform": "win32",
    "scope": "app",
    "source": "pergamum",
    "when": "workbenchFocus && !modalOpen && !textInputFocus",
  },
]
`;
